fix тип получаемых данных для модерации исправлен с Page на List